--- a/index.html
+++ b/index.html
@@ -1,289 +1,187 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>GTM Playground</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/codemirror.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.5/mode/javascript/javascript.min.js"></script>
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    input, button {
-      font-size: 16px;
-    }
-    input {
-      padding: 8px;
-      width: 300px;
-    }
-    button {
-      padding: 8px 12px;
-      cursor: pointer;
-      margin-bottom: 5px;
-    }
-    .CodeMirror {
-      border: 1px solid #ccc;
-      font-size: 14px;
-      height: auto;
-    }
-    .preset-wrapper {
-      display: flex;
-      gap: 10px;
-      align-items: flex-start;
-      margin-bottom: 20px;
-      border-bottom: 1px solid #ddd;
-      padding-bottom: 20px;
-    }
-    .preset-buttons {
-      display: flex;
-      flex-direction: column;
-      flex-shrink: 0;
-      margin-top: 0;
-    }
-    .label {
-      font-weight: bold;
-      margin: 30px 0 10px;
-      font-size: 36px;
-    }
-    .log {
-      margin-top: 15px;
-      background: #f9f9f9;
-      padding: 10px;
-      border: 1px solid #ddd;
-      font-family: monospace;
-    }
-    .small-button {
-      padding: 4px 8px;
-      font-size: 14px;
-    }
-    .preset-header {
-      font-size: 18px;
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-  </style>
-</head>
-<body>
-  <h1>GTM Playground</h1>
+<!-- kun den nederste del er ændret – her er hele filen for overblik -->
+<script src="datalayer.js"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
 
-  <label for="gtmId">Enter your GTM Container ID:</label><br>
-  <input type="text" id="gtmId" placeholder="GTM-XXXXXXX" />
-  <button onclick="loadGTM()">Inject GTM</button>
-
-  <hr>
-
-  <div class="label">Free custom JS</div>
-  <div class="preset-wrapper">
-    <div class="preset-buttons">
-      <button onclick="runCustom()">Run JS</button>
-      <button class="small-button" onclick="copyCustom()">Copy</button>
-    </div>
-    <textarea id="customJson">// Example:
-dataLayer.push({
-  event: "custom_event",
-  my_value: 123
-});</textarea>
-  </div>
-
-  <div class="log" id="logOutput">Console output will appear here…</div>
-
-  <hr>
-
-  <div class="label">Test Events (editable in <code>datalayer.js</code>)</div>
-  <div id="presetsArea"></div>
-  <button onclick="savePresets()">💾 Save Changes to localStorage</button>
-  <p style="margin-top: 0; color: gray;">Gem ændringer, så de bevares ved reload.</p>
-  <button onclick="copyAllAsDataLayer()">📋 Copy ALL as datalayer.js file</button>
-  <p style="margin-top: 0; color: gray;">Kopierer alle events i formatet klar til <code>datalayer.js</code>.</p>
-  <button onclick="resetPresets()">♻️ Reset and use datalayer.js</button>
-  <p style="margin-top: 0; color: gray;">Fjerner gemte events og henter igen fra <code>datalayer.js</code>.</p>
-
-  <script src="datalayer.js"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function loadGTM() {
-      const id = document.getElementById('gtmId').value.trim();
-      if (!id.match(/^GTM-[A-Z0-9]+$/i)) {
-        alert('Invalid GTM ID');
-        return;
-      }
-      localStorage.setItem('gtm_id', id);
-      const script = document.createElement('script');
-      script.src = 'https://www.googletagmanager.com/gtm.js?id=' + id;
-      script.async = true;
-      document.head.appendChild(script);
-      dataLayer.push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
-
-      const iframe = document.createElement('iframe');
-      iframe.src = `https://www.googletagmanager.com/ns.html?id=${id}`;
-      iframe.height = 0;
-      iframe.width = 0;
-      iframe.style.display = 'none';
-      iframe.style.visibility = 'hidden';
-      document.body.appendChild(iframe);
+  function loadGTM() {
+    const id = document.getElementById('gtmId').value.trim();
+    if (!id.match(/^GTM-[A-Z0-9]+$/i)) {
+      alert('Invalid GTM ID');
+      return;
     }
+    localStorage.setItem('gtm_id', id);
+    const script = document.createElement('script');
+    script.src = 'https://www.googletagmanager.com/gtm.js?id=' + id;
+    script.async = true;
+    document.head.appendChild(script);
+    dataLayer.push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
 
-    function runCustom() {
+    const iframe = document.createElement('iframe');
+    iframe.src = `https://www.googletagmanager.com/ns.html?id=${id}`;
+    iframe.height = 0;
+    iframe.width = 0;
+    iframe.style.display = 'none';
+    iframe.style.visibility = 'hidden';
+    document.body.appendChild(iframe);
+  }
+
+  function runCustom() {
+    try {
+      const code = customEditor.getValue();
+      new Function(code)();
+      log('✅ Ran custom JS');
+    } catch (e) {
+      log('❌ Error: ' + e.message);
+    }
+  }
+
+  function copyCustom() {
+    navigator.clipboard.writeText(customEditor.getValue()).then(() => {
+      log('📋 Copied custom JS');
+    });
+  }
+
+  function log(msg) {
+    document.getElementById('logOutput').textContent = msg;
+    console.log(msg);
+  }
+
+  const defaultPresets = window.gtmPresets || [];
+  let presetEditors = [];
+  let customEditor;
+
+  function loadPresets() {
+    const saved = localStorage.getItem('presets_full_js');
+    const presets = saved ? JSON.parse(saved) : defaultPresets;
+    const container = document.getElementById('presetsArea');
+    container.innerHTML = '';
+    presetEditors = [];
+
+    presets.forEach((preset, i) => {
+      container.appendChild(renderPreset(preset, i));
+    });
+  }
+
+  function renderPreset(preset, index) {
+    const wrapper = document.createElement('div');
+    wrapper.className = 'preset-wrapper';
+
+    const buttons = document.createElement('div');
+    buttons.className = 'preset-buttons';
+
+    const runBtn = document.createElement('button');
+    runBtn.textContent = 'Push';
+
+    const copyBtn = document.createElement('button');
+    copyBtn.textContent = 'Copy as dataLayer.push';
+    copyBtn.className = 'small-button';
+
+    const copyDLBtn = document.createElement('button');
+    copyDLBtn.textContent = 'Copy as datalayer.js block';
+    copyDLBtn.className = 'small-button';
+
+    const label = document.createElement('div');
+    label.className = 'preset-header';
+    label.textContent = 'Event: ' + (preset.name || `custom_${index + 1}`);
+
+    const textarea = document.createElement('textarea');
+    textarea.value = preset.code;
+
+    const container = document.createElement('div');
+    container.style.flex = '1';
+    container.appendChild(label);
+    container.appendChild(textarea);
+
+    wrapper.appendChild(buttons);
+    wrapper.appendChild(container);
+
+    const editor = CodeMirror.fromTextArea(textarea, {
+      mode: 'javascript',
+      lineNumbers: true,
+      tabSize: 2
+    });
+
+    presetEditors[index] = editor;
+
+    runBtn.onclick = () => {
       try {
-        const code = customEditor.getValue();
-        new Function(code)();
-        log('✅ Ran custom JS');
+        new Function(editor.getValue())();
+        log(`✅ Executed: ${label.textContent}`);
       } catch (e) {
-        log('❌ Error: ' + e.message);
+        log('❌ Error parsing JS: ' + e.message);
       }
-    }
+    };
 
-    function copyCustom() {
-      navigator.clipboard.writeText(customEditor.getValue()).then(() => {
-        log('📋 Copied custom JS');
+    copyBtn.onclick = () => {
+      navigator.clipboard.writeText(editor.getValue()).then(() => {
+        log('📋 Copied as dataLayer.push');
       });
-    }
+    };
 
-    function log(msg) {
-      document.getElementById('logOutput').textContent = msg;
-      console.log(msg);
-    }
-
-    const defaultPresets = window.gtmPresets || [];
-    let presetEditors = [];
-    let customEditor;
-
-    function loadPresets() {
-      const saved = localStorage.getItem('presets_full_js');
-      const presets = saved ? JSON.parse(saved) : defaultPresets;
-      const container = document.getElementById('presetsArea');
-      container.innerHTML = '';
-      presetEditors = [];
-
-      presets.forEach((preset, i) => {
-        container.appendChild(renderPreset(preset, i));
-      });
-
-      customEditor = CodeMirror.fromTextArea(document.getElementById('customJson'), {
-        mode: 'javascript',
-        lineNumbers: true,
-        tabSize: 2
-      });
-    }
-
-    function renderPreset(preset, index) {
-      const wrapper = document.createElement('div');
-      wrapper.className = 'preset-wrapper';
-
-      const buttons = document.createElement('div');
-      buttons.className = 'preset-buttons';
-
-      const runBtn = document.createElement('button');
-      runBtn.textContent = 'Push';
-
-      const copyBtn = document.createElement('button');
-      copyBtn.textContent = 'Copy as dataLayer.push';
-      copyBtn.className = 'small-button';
-
-      const copyDLBtn = document.createElement('button');
-      copyDLBtn.textContent = 'Copy as datalayer.js block';
-      copyDLBtn.className = 'small-button';
-
-      const label = document.createElement('div');
-      label.className = 'preset-header';
-      label.textContent = 'Event: ' + (preset.name || `custom_${index + 1}`);
-
-      const textarea = document.createElement('textarea');
-      textarea.value = preset.code;
-
-      const container = document.createElement('div');
-      container.style.flex = '1';
-      container.appendChild(label);
-      container.appendChild(textarea);
-
-      wrapper.appendChild(buttons);
-      wrapper.appendChild(container);
-
-      const editor = CodeMirror.fromTextArea(textarea, {
-        mode: 'javascript',
-        lineNumbers: true,
-        tabSize: 2
-      });
-
-      presetEditors[index] = editor;
-
-      runBtn.onclick = () => {
-        try {
-          new Function(editor.getValue())();
-          log(`✅ Executed: ${label.textContent}`);
-        } catch (e) {
-          log('❌ Error parsing JS: ' + e.message);
-        }
-      };
-
-      copyBtn.onclick = () => {
-        navigator.clipboard.writeText(editor.getValue()).then(() => {
-          log('📋 Copied as dataLayer.push');
-        });
-      };
-
-      copyDLBtn.onclick = () => {
-        const name = preset.name || `custom_${index + 1}`;
-        const fullBlock = `// ***** START ${name} *****  \n{
+    copyDLBtn.onclick = () => {
+      const name = preset.name || `custom_${index + 1}`;
+      const fullBlock = `// ***** START ${name} *****  \n{
   name: "${name}",
   code: \\`${editor.getValue()}\\`
 },\n// ***** END ${name} *****`;
-        navigator.clipboard.writeText(fullBlock).then(() => {
-          log('📋 Copied as datalayer.js block');
-        });
-      };
-
-      buttons.appendChild(runBtn);
-      buttons.appendChild(copyBtn);
-      buttons.appendChild(copyDLBtn);
-
-      return wrapper;
-    }
-
-    function savePresets() {
-      const updated = presetEditors.map((editor, index) => {
-        const name = defaultPresets[index]?.name || `custom_${index + 1}`;
-        return {
-          name: name,
-          code: editor.getValue()
-        };
+      navigator.clipboard.writeText(fullBlock).then(() => {
+        log('📋 Copied as datalayer.js block');
       });
-      localStorage.setItem('presets_full_js', JSON.stringify(updated));
-      log('💾 Presets saved to localStorage');
-      loadPresets();
-    }
+    };
 
-    function resetPresets() {
-      localStorage.removeItem('presets_full_js');
-      log('♻️ LocalStorage cleared. Reloading datalayer.js presets…');
-      loadPresets();
-    }
+    buttons.appendChild(runBtn);
+    buttons.appendChild(copyBtn);
+    buttons.appendChild(copyDLBtn);
 
-    function copyAllAsDataLayer() {
-      const eventBlocks = presetEditors.map((editor, i) => {
-        const name = defaultPresets[i]?.name || `custom_${i + 1}`;
-        const code = editor.getValue();
-        return `// ***** START ${name} *****  \n{
+    return wrapper;
+  }
+
+  function savePresets() {
+    const updated = presetEditors.map((editor, index) => {
+      const name = defaultPresets[index]?.name || `custom_${index + 1}`;
+      return {
+        name: name,
+        code: editor.getValue()
+      };
+    });
+    localStorage.setItem('presets_full_js', JSON.stringify(updated));
+    log('💾 Presets saved to localStorage');
+    loadPresets();
+  }
+
+  function resetPresets() {
+    localStorage.removeItem('presets_full_js');
+    log('♻️ LocalStorage cleared. Reloading datalayer.js presets…');
+    loadPresets();
+  }
+
+  function copyAllAsDataLayer() {
+    const eventBlocks = presetEditors.map((editor, i) => {
+      const name = defaultPresets[i]?.name || `custom_${i + 1}`;
+      const code = editor.getValue();
+      return `// ***** START ${name} *****  \n{
   name: "${name}",
   code: \\`${code}\\`
 },\n// ***** END ${name} *****`;
-      });
-      const finalCode = `const presetEvents = [\n${eventBlocks.join('\n\n')}\n];\n\nwindow.gtmPresets = presetEvents;`;
-      navigator.clipboard.writeText(finalCode).then(() => {
-        log('📋 All events copied as datalayer.js file');
-      });
-    }
-
-    window.addEventListener('load', () => {
-      const lastId = localStorage.getItem('gtm_id');
-      if (lastId) document.getElementById('gtmId').value = lastId;
-      loadPresets();
     });
-  </script>
-</body>
-</html>
+    const finalCode = `const presetEvents = [\n${eventBlocks.join('\n\n')}\n];\n\nwindow.gtmPresets = presetEvents;`;
+    navigator.clipboard.writeText(finalCode).then(() => {
+      log('📋 All events copied as datalayer.js file');
+    });
+  }
+
+  // ✅ Now initializing the customEditor outside loadPresets to avoid DOM issues
+  window.addEventListener('load', () => {
+    const lastId = localStorage.getItem('gtm_id');
+    if (lastId) document.getElementById('gtmId').value = lastId;
+
+    customEditor = CodeMirror.fromTextArea(document.getElementById('customJson'), {
+      mode: 'javascript',
+      lineNumbers: true,
+      tabSize: 2
+    });
+
+    loadPresets();
+  });
+</script>
+
